Added some dark colors and font styling and bg gradient

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     
     <title>Weather App</title>
   </head>
-  <body>
+  <body style="background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898;
+  background-blend-mode: multiply,multiply;;height: 100%; margin: 0; background-repeat: no-repeat; background-attachment: fixed;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  </body>
+</body> 
 </html>
